WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75122
Animating some CSS filter values is wrong
https://bugs.webkit.org/show_bug.cgi?id=75122
Summary
Animating some CSS filter values is wrong
Simon Fraser (smfr)
Reported
2011-12-22 13:50:13 PST
The behavior looks wrong when the following filters are animated from the "passthrough" state to the default state: contrast brightness drop shadow
Attachments
Patch
(12.93 KB, patch)
2011-12-22 14:58 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(13.06 KB, patch)
2011-12-22 14:59 PST
,
Simon Fraser (smfr)
cmarrin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-12-22 14:58:06 PST
Created
attachment 120386
[details]
Patch
Simon Fraser (smfr)
Comment 2
2011-12-22 14:59:23 PST
Created
attachment 120388
[details]
Patch
Simon Fraser (smfr)
Comment 3
2011-12-22 15:19:37 PST
http://trac.webkit.org/changeset/103586
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug