Animating some CSS filter values is wrong https://bugs.webkit.org/show_bug.cgi?id=75122

Source/WebCore:

Reviewed by Chris Marrin.

Fix some reversed filter animation behavior for brightness,
contrast and drop-shadow filters.

Test: css3/filters/filter-animation-from-none.html

* platform/graphics/filters/FilterOperation.cpp:
(WebCore::BasicComponentTransferFilterOperation::blend): Just use the global blend() function.
(WebCore::BasicComponentTransferFilterOperation::passthroughAmount): Add CONTRAST and BRIGHTNESS to the sswitch.
(WebCore::GammaFilterOperation::blend): Fix the ordering.
(WebCore::DropShadowFilterOperation::blend): Fix the ordering.

LayoutTests:

Reviewed by Chris Marrin.

Add a new test that exercises the "from none" code path.

Fix filter-animation.html, which used too-loose tolerance values
that resulted in some tests always passing.

* css3/filters/filter-animation-from-none-expected.txt: Added.
* css3/filters/filter-animation-from-none.html: Copied from LayoutTests/css3/filters/filter-animation.html.
* css3/filters/filter-animation.html:

Canonical link: https://commits.webkit.org/91897@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103586 268f45cc-cd09-0410-ab3c-d52691b4dbfc